# boilerplate

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  boil  boilerplate  boilerplate.cpp  boilerplate.cxx  boilerplate.ixx  herewegoagain.props  herewegoagain.vssettings  radix_sort.cpp
.etc/: graph.cpp  graph.cxx  radix_sort.cpp  radix_sort.cxx
etc/: boil.cxx  boilerplate.cxx  radix_sort.cxx
